# AI-Knowledge-Assistant

./: README.md  chainlit_app.py  chunks.json  phase1_process_docs.py  phase2_keywordsearch.py  phase3_semantic_search.py  phase4_rag_chat.py  phase5_advanced_rag_chat.py  pyproject.toml  requirements.txt  total_rag_app.py
