[project]
name = "total-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.8.3",
    "chromadb>=1.2.2",
    "hf-xet>=1.2.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-nomic>=1.0.0",
    "langchain-openai>=1.0.1",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "pypdf>=6.1.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
    "websockets>=15.0.1",
]
